test/scc_test/stmt/semantic-errors/021.t
void test()
{
    struct { int x; } a;
    for (; a; ) ;
}